Fix Bourbon position, remove flexbox panels, fix double scrollbars, override isotope visibilty

--- a/client/stylesheets/_base.scss
+++ b/client/stylesheets/_base.scss
@@ -19,16 +19,6 @@
 }
 
 // ANIMATIONS
-@include keyframes(panelIn) {
-  0% {
-    @include transform(translate3d(-50px, 0, 0));
-    opacity: 0;
-  }
-  100% {
-    @include transform(translate3d(0, 0, 0));
-    opacity: 1;
-  }
-}
 
 // VARIABLES
 $colorGray1: #333;
@@ -70,8 +60,7 @@ body {
   font-family: $fontFamilyBase;
   font-size: 16px;
   line-height: em(22);
-  overflow-x: hidden;
-  overflow-y: scroll;
+  overflow: auto;
 }
 
 h1,
@@ -158,7 +147,7 @@ small {
   color: $colorGray4;
 
   img {
-    @include position(absolute, 0px 0 0 0px);
+    @include position(absolute, 0 null null 0);
     border-radius: 3px;
     max-height: 100%;
     max-width: 100%;
@@ -242,7 +231,7 @@ input[type="checkbox"] {
   }
 
   &:checked:before {
-    @include position(relative, -3px 0 0 1px);
+    @include position(relative, -3px null null 1px);
     content: "\E021";
     font-size: 0.8em;
   }
@@ -278,21 +267,6 @@ button {
 // LAYOUT
 .width-wrapper {
   padding: 1em;
-}
-
-.panels {
-  @include display-box;
-  @include box-align(start);
-  @include box-orient(horizontal);
-  @include box-pack(start);
-  padding-left: em(60) + 2em;
-  padding-bottom: 5em;
-  overflow: visible;
-}
-
-.panel {
-  @include box-flex(1);
-  width: 0;
 }
 
 // PROGRESS
